--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,4 +2,6 @@
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
+<link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.png">
+
 <!-- end custom head snippets -->
